@@ -69,6 +69,10 @@ test {
 }
 asciidoctor {
     inputs.dir snippetsDir
+    inProcess = JAVA_EXEC
+    forkOptions {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
+    }
     configurations 'asciidoctorExt'
     dependsOn test
 }
@@ -77,6 +81,17 @@ bootJar {
     from("${asciidoctor.outputDir}/html5") {
         into 'static/docs'
     }
+}
+asciidoctor.doFirst {
+    delete file('src/main/resources/static/docs')
+}
+task copyDocument(type: Copy) {
+    dependsOn asciidoctor
+    from file("build/docs/asciidoc")
+    into file("src/main/resources/static/docs")
+}
+build {
+    dependsOn copyDocument
 }
 
 tasks.named('test') {
